Responsive and SEO
- Responsive Layout
- SEO Meta tags added
- Noscript tag added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,87 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <meta name="description" content="21-jarige full-stack webdeveloper uit Nederland | .NET en meer | Ontdek mijn projecten en reis mee met mijn Software-Expeditie!">
+    <meta property="og:description" content="21-jarige full-stack webdeveloper uit Nederland | .NET en meer | Ontdek mijn projecten en reis mee met mijn Software-Expeditie!">
+    <meta name="twitter:description" content="21-jarige full-stack webdeveloper uit Nederland | .NET en meer | Ontdek mijn projecten en reis mee met mijn Software-Expeditie!">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Jop Bertrams">
+    <meta name="keywords" content="Jop Bertrams, Jop, Bertrams, Software, Software-engineer, Software Engineer, Software Engineering, Software Development, Full-Stack Web Development, Web Development, .NET, .NET Technologies, Programming, Coding, Nederland, The Netherlands, Reuver, C#, Front-end, Back-end">
+    <meta name="theme-color" content="#0F1A20">
+    <meta name="msapplication-navbutton-color" content="#0F1A20">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#0F1A20">
+    <meta property="og:title" content="Jop Bertrams">
+    <meta property="og:image" content="https://jopbertrams.nl/images/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:url" content="https://jopbertrams.nl">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="nl_NL">
+    <meta property="og:locale:alternate" content="en_GB" />
+    <meta property="og:site_name" content="Jop Bertrams">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Jop Bertrams">
+    <meta name="twitter:image" content="https://jopbertrams.nl/images/og-image.png">
+    <meta name="twitter:image:alt" content="Jop Bertrams">
+    <meta name="twitter:site" content="@JopBertrams">
+    <meta name="twitter:creator" content="@JopBertrams">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-35003LX15S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-35003LX15S');
+    </script>
     <title>Jop Bertrams</title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <noscript>
+      <style>
+        html,
+        body,
+        .no-js {
+          margin: 0;
+          padding: 0;
+        }
+        .no-js {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          height: 100vh;
+          width: 100vw;
+          font-family: 'Roboto', sans-serif;
+          color: #fff;
+          background-color: #0F1A20;
+        }
+        .no-js a {
+          color: #fff;
+          text-decoration: none;
+        }
+        .no-js a:hover {
+          color: #fff;
+          text-decoration: underline;
+        }
+        hr {
+          width: 25%;
+        }
+      </style>
+      <div class='no-js'>
+        <h1>JavaScript is disabled :'(</h1>
+        <p>
+          Deze website vereist JavaScript om te functioneren. Schakel JavaScript in en herlaad de pagina.
+        </p>
+        <a href='https://www.enable-javascript.com/nl/'>Hoe schakel ik JavaScript in?</a>
+        <hr />
+        <p>
+          This website requires JavaScript to be enabled. Please enable JavaScript and reload the page.
+        </p>
+        <a href='https://www.enable-javascript.com/'>How do I enable JavaScript?</a>
+      </div>
+    </noscript>
   </body>
 </html>
